# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1341 2014/06/12 12:02:44 mpagano Exp $

*gentoo-sources-3.12.22 (12 Jun 2014)

  12 Jun 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.12.22.ebuild:
  Linux patch 3.12.22. Removal of redudndants patches. Fix for CVE-2014-4014,
  see bug #512980

*gentoo-sources-3.14.7 (12 Jun 2014)

  12 Jun 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.7.ebuild:
  Linux patch 3.14.7. Fix for CVE-2014-4014, see bug #512980

*gentoo-sources-3.2.60 (09 Jun 2014)

  09 Jun 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.2.60.ebuild:
  Linux patch 3.2.59. Linux patch 3.2.60. Removal of redudant patches

*gentoo-sources-3.4.92 (09 Jun 2014)

  09 Jun 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.4.92.ebuild:
  Linux patch 3.4.92. Removal of redundan patches

*gentoo-sources-3.10.42 (09 Jun 2014)

  09 Jun 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.10.42.ebuild:
  Linux patch 3.10.42. Removal of redundant patches.

*gentoo-sources-3.15.0 (09 Jun 2014)

  09 Jun 2014; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.15.0.ebuild:
  Linux patch 3.15.0. Patch to enable mic mute led in thinkpads. Zero copy for
  infiniband psm userspace driver. ACPI: Disable Windows 8 compatibility for
  some Lenovo ThinkPads. Patch to ensure that /dev/root doesn't appear in
  /proc/mounts when bootint without an initramfs. Do not lock when UMH is
  waiting on current thread spawned by linuxrc. Support for Pogoplug e02 (bug
  #460350), adjusted to be opt-in by TomWij. Add Gentoo Linux support config
  settings and defaults.

*gentoo-sources-3.14.6 (08 Jun 2014)

  08 Jun 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.6.ebuild:
  Linux patch 3.14.6. Removal of redundant patches

*gentoo-sources-3.4.91-r1 (06 Jun 2014)