@@ -60,6 +60,9 @@ DIST genpatches-3.14-9.experimental.tar.xz 51216 SHA256 65b2498a51eae37bb400c9d0
 DIST genpatches-3.14-9.extras.tar.xz 18240 SHA256 5faa557d9ac6b258eb1e1e8a680f1b314bb2c34401f34637e9b7c97652ff6065 SHA512 50d378f7f004127e6defed0d04b0305c44bdc6b04ff92aa6fc4c769f880bc79b916b3c899e4853628252d45ab23d9aa06fbf3b3a131b9c89a9a657fc6227d0c2 WHIRLPOOL feec9f7d8e0271bf1274be11f9d37c1010dc40716863739e8db32f0f1480623108b2d9273e52f835e557dbe535b979fcedc3bc3cb5622651f2dd15aae04a2391
 DIST genpatches-3.15-1.base.tar.xz 6676 SHA256 d6080d70101437f480be36827144da4ff436ff6849d4633921eca8d52c65c96e SHA512 45e46a1b1edfb7a0ed4519d8ea18e6757cf83b559023059a40bf549d7cc1f3dd0061a63ba0abf7342e3e0fdde643f7af5886888c8ce6dec97c4edfac94ef4cbc WHIRLPOOL e9a7fd784087def39db3a917a9dbc87b37876ac290a7b829bc7d842f36bb57384f03d5aeeff09ce46eceaa8a6d4ac333afc03cb19978edb4d1e79e871594e921
 DIST genpatches-3.15-1.extras.tar.xz 3160 SHA256 e6c150cbfeb64d6eca399148bcf7307ed402452c3e2211386de79d5e84d7350a SHA512 480a0a33e76f221afbfe8a46a1887ad7326916037fca9a52b3a1089394f9966875579078393d9bb07cd317bf5a83511d0f1dfa2b8ab15e0470529c755fb17457 WHIRLPOOL 05bdc4cc65f27652aa0a6d6367c1f34d0a0b96987abe7cc70d858e9b81b3bcfc43a42f5abda44393ca040f1bb5dac9377cc9dd77417d834285b68efd93c28794
+DIST genpatches-3.15-2.base.tar.xz 6920 SHA256 491441c9c9436d56122acf9bfe838d78d497fe5fbca7d62572498a42db6a7bb0 SHA512 5fe587992b5f13bd760bc9c22189ba95a183ca0fbd34252c4b146ac44dae84d9ec3b10f5f97c5b118c6f98bf0ebd774d0ba9ab82dd2e9051e3eb848940c91e5a WHIRLPOOL b3f97dfa7e31c250198354f7c85645e2bbf9ef0114e2d40594efb52acd9c3615cc171843a5e4a7eab5f43817ba56df3135918760e72934b81da1a125b2746422
+DIST genpatches-3.15-2.experimental.tar.xz 52800 SHA256 7b74f9fcd75012736edec6929dddf732941ff1dfce92d898edc7cb37a3a972c8 SHA512 a3124d53168c179f590e90070487d71540d827b10bc7c3ab9336dda4804a52b118fa89d21ec82349eb1f27a1abd3126e41c0a251c50c3ac6bb77a7303a608a9c WHIRLPOOL b462f2c92b1a22969af73563b8a2f11785170c2c6789e1f00dfba38262f6a99e5fbb9ac694c90cc79bcbf328f0eb15db79461a5fd5bb530bd54aa61268b8b483
+DIST genpatches-3.15-2.extras.tar.xz 4784 SHA256 35a6577f7d24a16f26c06a8e79a3e9542c9a6858cd8c68975c38a55b0e6fde20 SHA512 51486d8906a068f017e639012277906ebda0404304f4cb2f834d954c31e24ee8a3a762f7088a678723b7feaa2b505a8724f1eda842d914482ad7e02fe6907807 WHIRLPOOL 5f1c148c6b6a5774aa66ae475148703538b19af2ecd8200a9f063aa3270e809d4aad7ecf5abafe8ae802e543e35dfb887c0821dbd52105b6ace961223676030f
 DIST genpatches-3.2-37.base.tar.xz 1267808 SHA256 2f705e881eea0fa7040ccb1fa7240af30c0b93aebe1c640b3cdaaa61d037c655 SHA512 a9063721ed5be56cd1f20cd96841dbef7ff7c9d692b7022a3449c343d12cff0520f516073c01b9c6959f68f63432ffe5a5c7d4dbf406f7fcab54379193e70a2e WHIRLPOOL d4064438b5790306af6d856e83eac77fcde33595ba0f30c325acdf596b5fbaafb77afa53df8c545c89096dd7e76204df1cd9986e743305221d2586a8b6792336
 DIST genpatches-3.2-37.extras.tar.xz 17976 SHA256 c22f1e24503163bd7560e3db15e8183e00b4a99c421db325ba9a41a897b4f29e SHA512 167d90a56b3f7b901b58d0fe6791b5f1681f6f6369590a424815a746504a5b4ed7b12ec9106099c3930a2ecd996291f651b3e04957a83123981816e570b9f69b WHIRLPOOL 430f4e93bfd0ef3cc1a10a59772dd24c927f4c9c90d477d84587e211a6c4163ab5166db8bd9297edb6dcb5ca448c734c0c283dad9b1830ad3b1e3210b2bf53e2
 DIST genpatches-3.2-38.base.tar.xz 1273696 SHA256 520c4b0b042e0108ac0450bcab114b037357b2d0b87cb2d29336decf3ded8a06 SHA512 cbe07bae602f53c35265a4f888ee4b95dc7cf5d4ac1f46c15b0baa2b7e1c9f966a678d96fb2851b6039d46376cabf9dcb2a68490f205efc22959ab1525317729 WHIRLPOOL 46142d69c7706fc8d22eb3e8e6a88e9de6d1bdbece72cf88dd6cb84366703faeb1428ddf4a01c9fe17770f2857d4d325f5558049213eb2d4f8096a1b02294508
@@ -97,6 +100,7 @@ EBUILD gentoo-sources-3.14.5-r1.ebuild 901 SHA256 d20daba4d263f8bb3839d1dcc61dca
 EBUILD gentoo-sources-3.14.5.ebuild 899 SHA256 9d3f8eea7d715a38463b8f0e4335b2e996673e24fc5aa6aa7b3967e3d362bd85 SHA512 7e9b50592ca9bed784016539cc6525f60d93535acaf1733887f89e593ae0b0fd0e1d7dcf2c1f28e8da50d0ebcd705ea1902b77de82e3925d94d91634c6daf07c WHIRLPOOL d0f4cdb24c4eb34e5a53d3efa6878f9506ee5d93df8c3ad52bf4fba8dce5d6a013566bdeb7514ac443124d41720f1cb89277902751568007be9b9020c5792fc3
 EBUILD gentoo-sources-3.14.6.ebuild 900 SHA256 71f0d69427883f42b1c6f49627f211e9742dbd5f3a82c3d6eb131fd8ef9b3fd7 SHA512 1440db9f255dcf564470f2b80b0adb5a521f60dc358abdc92e98adbf2a653ac5fce02207ac9832a325d9cb2e78e6a80b111d122965c929a43d4c377c19ae9197 WHIRLPOOL 3b3d2135211c55692ee642dfb8423ae4f4bcf489a8367216cc739dd5d68d2ba3459dcc7e165e107b94faecd1f469f9ac7b6e774600e144b36daeb95ff2193e23
 EBUILD gentoo-sources-3.14.7.ebuild 900 SHA256 b0cdeb67e293dee8cfef38327622ad38332094af9dfbe792829a8bb35ff828d7 SHA512 060a7202fb03ba4ea52f42905f75e735725f13f58398a9008b31e97df009dad4dfe163f0008b08c88aba504074ae207d69c51894542784e12ca7c1caacf98355 WHIRLPOOL 38c64d78fe1e4a34d72002b16d75b42f23966933893ff3a3ea60d026278dbd8ca58f54178579b116281134a943b8630becc9d2a25ee16416c0c9d9c0e834eba2
+EBUILD gentoo-sources-3.15.0-r1.ebuild 902 SHA256 9c502662946c374a6929e704c6b8be0fb154b38d3f11cc73d37341ad6a921a86 SHA512 c6e4e1e792426b6d0b6f723f9aa7fa6c575706f5e8dc77378a51768a44b4ffe2531e47f7cfd187656920e963396dc9d8cf9ff82099586bf3b458e83c71445bb6 WHIRLPOOL 8a6f0855eec0961169c37751cb8a72ce6da4a0bb2b8ed3fbb1d7f40780ed14e8bdb754192ed4a5c9ce2bd9a465517172dd6ac2c0ddca0a661343dd6cc32e6a27
 EBUILD gentoo-sources-3.15.0.ebuild 873 SHA256 e59ef5ea66fe698b15e313dd753dca31f622f5bdbe8f5ab60460d3a22069aad5 SHA512 68102fedb0b5812bf915db14ffc39c01c4014956a26b658674f7fedba52f4933e2e2abb3e7769b168f87b2356c3ef1807779a0ae0d0911d135e7172114563979 WHIRLPOOL f0652adaf905f6c0fd4fb389c31e7877d9001bcd4889a1f4a2cc597fddd888e3b6643b5e26fc04a8007a00852d479e8a7e0e5288e3ea90659c158301505dad55
 EBUILD gentoo-sources-3.2.58-r2.ebuild 863 SHA256 ae9dbc4fb295d269ccc7c50e868576a399b40dc6cd39e5b6b07713bff2070e07 SHA512 02e4be340fb02cbe4ef2d04f5e37b56cd0fbdc97d286980ff76b0463004b6e943e749fc482a85b1eb325e83959d7138e6b08172dce2e0742335a01952ee8eb80 WHIRLPOOL d4dde5d9ef0b98eae5591e4ae8fc3c875415baf19c3960dc533005fd298a45a66d98e4216282644e6cbef11a5f778a256cb200113bc393b68ca57fb3515fee05
 EBUILD gentoo-sources-3.2.58-r3.ebuild 863 SHA256 4440cac6f24f13274ae2e00fc17c35915bf4f9911a0b029698da427f2f0a412b SHA512 77e447d79cd212ce78a5acc8d0766dd8f6766fa7b9bc40902c7667fcd532be88fdb3f1ae6280556b365405694de30df2a5eed810e67040ed96498d5523ce38d4 WHIRLPOOL 8402f252662ef0b78df08b26b98f5f8694e61a3f4ab27f6938582728e424a820bbc51b8a1e2a84f012c8115f5d764f4133b493ad6f40e9ecaadae357578e3179
@@ -106,14 +110,14 @@ EBUILD gentoo-sources-3.4.91-r1.ebuild 863 SHA256 3be4d7ca0d067e19075acd90e3f02d
 EBUILD gentoo-sources-3.4.91.ebuild 861 SHA256 41b4420b2e7bcfdd5e5f20903aded5ddc17cbb6815af95dc3a563358fed8bed0 SHA512 606a724bea5cc645aa5ac64e8ae270eddb96c3786c694a3bd13fec20baa2b28b35cb0b8ac967d54170992021d340a2d3819496d9977d26649fd6fc5f083a7efd WHIRLPOOL 48feb8eae005ba87bfedb71b6e590c94d619a58eb5ac7aa5e7e5a9340e43e6659cc1160be7a258fa7ccf9574fb6ca15f3ba4f5fe5bae97dcc48d77d089f4d476
 EBUILD gentoo-sources-3.4.92.ebuild 861 SHA256 6a82ee6afcaced5229d41ecaa9a3cce4cc2badbf74b8d3c25b955af4ce5f6493 SHA512 80254f771537ef5b80c61702e21910e6e7cfface7cc29d8d8aebb80bcce7bb14c1d021398935b04184129cddb25da958de892eabbc1633c00872bf45ef770a50 WHIRLPOOL 3c00d6b5d202b01cca91f650816bf0527c71e6b6b9f3c1d049f3afebab41fbf1644da8e6b7d706432dc8ccffbbe68a4417c062d8368ef643b2a933c25c7b96de
 EBUILD gentoo-sources-3.4.9999.ebuild 2261 SHA256 64d3f4729e4948fdf9014146398b83037934c269559bf1d741ae6f8ec7a8035d SHA512 5245ba40f58e8e697834f5700e9e26cc30636d9d5fe85207e113cbeca36d1b3af0b949c24100de4b4291b532f76f6f127e2e0a93645058fd9bb517bb429fff01 WHIRLPOOL 16a31af3779c07c0008dd8423d9ee25c4b8d96b1ad0278ce454627c6d88bc0f533576317486f046228ad771cfa621273f4d9099324b238cdab709da7690dd14a
-MISC ChangeLog 69497 SHA256 197037bc614a87faf0c86d3edca5d4c18f7798c9107171f370294b13ef09c077 SHA512 ecd11381bd5823a71c4ec934dd5d9f11da0b29ff88de7a17c53fa00dca855410e866aa55f3741f126933daa09c272bdd90b24fbf5cefdb303826334d6628a097 WHIRLPOOL 0d702fe9ace652be6bb29059041aa395d516a99abefe22ff1814bfcc0c2921b918f242290f9177d0cb00676ff2694824683514ea80b495b5b52f7c95b1241a0e
+MISC ChangeLog 69747 SHA256 05f273c1e872d82f56b8eb3988a0e6f6a50ef9fd0b96ee8a45e25c4918206fd2 SHA512 b36005d82eec4e5e36c1942f81af9dac9b89013502c386b30d36519ae947e596955b35f1a12acc105ec282a9fb96045f6a670d9ae261e7427a6ec0a09bfa1e4c WHIRLPOOL 90228f7efe213f5905ec68439c8825f713b79f5c5036b6111fae43238f91e86f6cb0c7cd419e32513fa7f0ccffa48e8b72b13ae6a399fb64d1fe470e3687e45e
 MISC ChangeLog-2007 91971 SHA256 8c37498df2246749abb2fd1eca05c396257989b91ba5ec0f83cedb25488118a9 SHA512 2215a9856bc1706abe21ad51d0af6176fec226e85a56ad8f54664d20a041bbe076359347f473a87c47904df2d8d2006d56d1535528b2eb7aa756f96ad9554876 WHIRLPOOL dd881fa7bbfc42ca35a46a0fe01d751b3373ac8f4e2ce5626ff26f94244d729e107f57b1be43daf3b73c2f18b090ee896d8a5eb38888fa9ca01097d1cbd46da7
 MISC ChangeLog-2012 101665 SHA256 a60304f93fc4644cdf0b068e586f6036d4463ea4b21bd745a8aa926da71db6ec SHA512 892085806f4c87f64db78e04d3c215ae6bca8939ffeced8a3792fe4a2476e72d2cc9dbc8a3b906943971eb853c337847e6a8bf976f9496be9944e216fb983234 WHIRLPOOL 590f17b5a90f48fa1733959500ce06fd72f95524b64b6abf508653a616961af2c0ea04ca2dbfe5523ff9dcd3bc67b3b24bc368eb84326d091ca449e558555f46
 MISC metadata.xml 512 SHA256 80143273f4462ac67194f8ef90706e5ebf65f3f30ff153b7ee19d2c155f49f7b SHA512 6262ba3cbc6480081a195024fc752ad0df27afe9b71d626d759f747a52a2a181d114379e463bd8741a843622556c1e46820e535e8fbe71e2790828370d70c5f0 WHIRLPOOL b4430c0590efa2c5cbfc85fed1386943f4c8d101dfc07a76ba79c37b1fe2fe4db21f65b58186e1cad1ea3987292c2ea0251f0e2017be018c020f7e2309b57bd1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlOZlvgACgkQPDPGULV25OM0NQCgw9K6VILYLni2IWOs2z0XuKFM
-xI4An1AWFC3BoMYiDigFsd/YBsFRMuPW
-=U41K
+iEYEAREIAAYFAlOZqfcACgkQPDPGULV25OOIGACcDtgREDyUq3H8zztiXWXh8+iZ
+z1AAn11OaT4rOwiKgjHIS44DHNr88e1V
+=Nz7p
 -----END PGP SIGNATURE-----
